# Nexus_00

./: README.md  README_dev.md  pyproject.toml
pantryPal/data_handler/: X509-cert-5911024749071255414.pem  config.py  models.py  urls.py  views.py
pantryPal/data_handler/templates/data_handler/: recipes.html
pantryPal/pantryPal/: settings.py  urls.py
pantryPal/pantryPal/data_handler/templates/data_handler/: index.html  recipes.html
