[tool.poetry]
name = "pantrypal"
version = "0.1.0"
description = "Web app to assist users in finding recipes."
authors = ["BugBashers: Arvin, David, Lia, Jose, Michael, Ryan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.2"
pymongo = "^4.6.2"
dnspython = "^2.6.1"
spoonacular = "^3.0"
mongoengine = "^0.28.0"
sqlparse = "^0.4.4"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
